--- a/VacationPlaner-WebApp/src/main/resources/templates/employeeAdd.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/employeeAdd.html
@@ -7,7 +7,8 @@
     <meta name="description" content=""/>
     <meta name="author" content=""/>
     <title>Add Employee</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet"/>
     <link href="css/styles.css" rel="stylesheet"/>
@@ -30,73 +31,75 @@
                     <li class="breadcrumb-item active">by Luz_Blue</li>
                 </ol>
             </div>
+
+            <div class="container">
+                <form action="#" th:action="@{/employeeAdd.html}" th:object="${employee}" method="post"
+                      class="row g-3 needs-validation" novalidate>
+                    <div class="col-md-4">
+                        <label for="validationCustom01" class="form-label">Imię</label>
+                        <input type="text" class="form-control" id="validationCustom01">
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="validationCustom02" class="form-label">Nazwisko</label>
+                        <input type="text" class="form-control" id="validationCustom02">
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="validationCustomUsername" class="form-label">Email</label>
+                        <input type="text" class="form-control" id="validationCustomUsername"
+                               aria-describedby="inputGroupPrepend">
+                        <div class="invalid-feedback">
+                            Please choose a username.
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="validationCustom03" class="form-label">Ulica</label>
+                        <input type="text" class="form-control" id="validationCustom03">
+                        <div class="invalid-feedback">
+                            Please provide a valid city.
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="validationCustom03" class="form-label">Numer domu / mieszkania</label>
+                        <input type="text" class="form-control" id="validationCustom06">
+                        <div class="invalid-feedback">
+                            Please provide a valid city.
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="validationCustom03" class="form-label">Miasto</label>
+                        <input type="text" class="form-control" id="validationCustom07">
+                        <div class="invalid-feedback">
+                            Please provide a valid city.
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <label for="validationCustom08" class="form-label">Kod Pocztowy</label>
+                        <input type="text" class="form-control" id="validationCustom08">
+                        <div class="invalid-feedback">
+                            Please select a valid state.
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <label for="validationCustom05" class="form-label">Numer Telefonu</label>
+
+                        <input type="text" class="form-control" id="validationCustom05">
+                        <div class="invalid-feedback">
+                            Please provide a valid Pesel.
+                        </div>
+                    </div>
+
+                    <div class="col-12">
+                        <button class="btn btn-success" type="submit">Zapisz Pracownika</button>
+                    </div>
+                </form>
+            </div>
         </main>
-<div class="container">
-    <form class="row g-3 needs-validation" novalidate>
-        <div class="col-md-4">
-            <label for="validationCustom01" class="form-label">Imię</label>
-            <input type="text" class="form-control" id="validationCustom01" required>
-            <div class="valid-feedback">
-                Looks good!
-            </div>
-        </div>
-        <div class="col-md-4">
-            <label for="validationCustom02" class="form-label">Nazwisko</label>
-            <input type="text" class="form-control" id="validationCustom02"  required>
-            <div class="valid-feedback">
-                Looks good!
-            </div>
-        </div>
-        <div class="col-md-4">
-            <label for="validationCustomUsername" class="form-label">Email</label>
-                <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
-                <div class="invalid-feedback">
-                    Please choose a username.
-                </div>
-        </div>
-        <div class="col-md-4">
-            <label for="validationCustom03" class="form-label">Ulica</label>
-            <input type="text" class="form-control" id="validationCustom03" required>
-            <div class="invalid-feedback">
-                Please provide a valid city.
-            </div>
-        </div>
-        <div class="col-md-4">
-            <label for="validationCustom03" class="form-label">Numer domu / mieszkania</label>
-            <input type="text" class="form-control" id="validationCustom06" required>
-            <div class="invalid-feedback">
-                Please provide a valid city.
-            </div>
-        </div>
-        <div class="col-md-4">
-            <label for="validationCustom03" class="form-label">Miasto</label>
-            <input type="text" class="form-control" id="validationCustom07" required>
-            <div class="invalid-feedback">
-                Please provide a valid city.
-            </div>
-        </div>
-        <div class="col-4">
-            <label for="validationCustom08" class="form-label">Kod Pocztowy</label>
-            <input type="text" class="form-control" id="validationCustom08" required>
-            <div class="invalid-feedback">
-                Please select a valid state.
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <label for="validationCustom05" class="form-label">Numer Telefonu</label>
-
-            <input type="text" class="form-control" id="validationCustom05" required>
-            <div class="invalid-feedback">
-                Please provide a valid Pesel.
-            </div>
-        </div>
-
-        <div class="col-12">
-            <button class="btn btn-success" type="submit">Zapisz Pracownika</button>
-        </div>
-    </form>
-</div>
-
         <footer class="py-4 bg-light mt-auto">
             <div class="container-fluid px-4">
                 <div class="d-flex align-items-center justify-content-between small">
