--- a/VacationPlaner-WebApp/src/main/resources/templates/employeeList.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/employeeList.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
-    <title>Employee List</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <title>Delete Employee</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet"/>
     <link href="css/styles.css" rel="stylesheet"/>
@@ -26,7 +27,7 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid px-4">
-                <h1 class="mt-4">Vacation Planner - List Pracowników</h1>
+                <h1 class="mt-4">Vacation Planner - Usuwanie Pracowników</h1>
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item active">by Luz_Blue</li>
                 </ol>
@@ -48,7 +49,6 @@
                             <th>Email</th>
                             <th>Adres</th>
                             <th>Numer Telefonu</th>
-                            <th>Opcje</th>
 
                         </tr>
                         </thead>
@@ -61,7 +61,6 @@
                             <th>Email</th>
                             <th>Adres</th>
                             <th>Numer Telefonu</th>
-                            <th>Opcje</th>
                         </tr>
                         </tfoot>
                         <tbody>
@@ -70,9 +69,10 @@
                             <th th:text="${Employee.getName()}"></th>
                             <td th:text="${Employee.getSurname()}"></td>
                             <td th:text="${Employee.getPesel()}"></td>
-                            <td th:text="${Employee.getEmail()}"></td>
+                            <td th:text="${Employee.email}"></td>
                             <td th:text="${Employee.getAddress()}"></td>
                             <td th:text="${Employee.getPhoneNumber()}"></td>
+
                         </tr>
                         </tbody>
                     </table>
@@ -80,6 +80,8 @@
             </div>
 
         </main>
+
+
         <footer class="py-4 bg-light mt-auto">
             <div class="container-fluid px-4">
                 <div class="d-flex align-items-center justify-content-between small">
