--- a/VacationPlaner-WebApp/src/main/resources/templates/vacationAdd.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/vacationAdd.html
@@ -38,33 +38,44 @@
                     <div class="col-md-4">
                         <label for="validationCustom01" class="form-label">Imię</label>
                         <input type="text" th:field="*{name}" class="form-control" id="validationCustom01" disabled>
-                        <div></div>
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
                     </div>
                     <input type="hidden" th:field="*{employeeId}" class="form-control" id="hiddenID">
                     <div class="col-md-4">
                         <label for="validationCustom02" class="form-label">Nazwisko</label>
                         <input type="text" th:field="*{surname}" class="form-control" id="validationCustom02" disabled>
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
                     </div>
                     <div class="col-4">
                         <label for="validationCustom09" class="form-label">PESEL</label>
                         <input type="text" th:field="*{pesel}" class="form-control" id="validationCustom09" disabled>
-                        <div class="invalid-feedback">
-                            Please select a valid state.
-                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="container">
+                <form action="#" th:action="@{/vacationAdd}" th:object="${Vacation}" method="post"
+                      class="row g-3 needs-validation" novalidate>
+                    <div class="col-md-4">
+                        <label for="start" class="form-label">Od</label>
+                        <input type="date" th:field="*{start}" class="form-control" id="start">
+                    </div>
+                    <div class="col-md-4">
+                        <label for="validationCustom02" class="form-label">Do</label>
+                        <input type="date" th:field="*{stop}" class="form-control" id="va">
+                    </div>
+                    <div class="col-md-4">
+                        <label for="start" class="form-label">Rodzaj Urlopu</label>
+                        <select class="form-select">
+                            <option value="1" th:fild="*{vacationType}">Wypoczynkowy</option>
+                            <option value="2" th:fild="*{vacationType}">Na żądanie</option>
+                            <option value="3" th:fild="*{vacationType}">Inny</option>
+                        </select>
                     </div>
                     <div class="col-12">
-                        <button class="btn btn-success" type="submit">Dodaj Urlop</button>
+                        <button class="btn btn-success" type="submit">Dodaj Urlopa</button>
                     </div>
                 </form>
             </div>
 
-            <h3>    </h3>
+            <h3></h3>
             <div class="card mb-4">
                 <div class="card-header">
                     <i class="fas fa-table me-1"></i>
