--- a/VacationPlaner-WebApp/src/main/resources/templates/teamModifySelectedTeam.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/teamModifySelectedTeam.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
-    <title>Modyfikacja Zespołu</title>
+    <title>Modyfikacja</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet"/>
@@ -26,7 +26,7 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid px-4">
-                <h1 class="mt-4">Vacation Planner - Modyfikacja Zespołu</h1>
+                <h1 class="mt-4">Vacation Planner - Modyfikacja</h1>
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item active">by Luz_Blue</li>
                 </ol>
@@ -58,7 +58,7 @@
                             <td th:text="${iter.count}"></td>
                             <td th:text="${Team.getTeamName()}"></td>
                             <td>
-                                <a th:href="@{/teamModifySelectedTeam/{teamName}(teamName=${Team.getTeamName()})}" class="btn btn-primary">
+                                <a th:href="@{/teamModify/{teamName}(teamName=${Team.getTeamName()})}" class="btn btn-primary">
                                     Modyfikuj
                                 </a>
                             </td>
